application form complete / mobile edits done / fixed alignment on mobile (backlog #1 - done)

--- a/assets/scss/_globals.scss
+++ b/assets/scss/_globals.scss
@@ -35,6 +35,37 @@ img {
     @include mq(lg) { padding: 1rem 3rem; }
 }
 
+// text only for screen readers with focus attrs
+.screen-reader-text {
+    border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    word-wrap: normal !important;
+
+    &:focus {
+        background-color: #eee;
+        clip: auto !important;
+        clip-path: none;
+        color: #444;
+        display: block;
+        font-size: 1em;
+        height: auto;
+        left: 5px;
+        line-height: normal;
+        padding: 15px 23px 14px;
+        text-decoration: none;
+        top: 5px;
+        width: auto;
+        z-index: 100000;
+    }
+}
+
 // on all blocks to create even spacing
 .block-margin {
     margin: 3.75rem auto !important;
